backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    COMMA
    CONTINUE
    FOR
    FUNCTION
    INTERFACE
    LBRACKET
    NOTDBEQ
    NULL
    OF
    RBRACKET
    RETURN
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> print SEMI
Rule 5     instruction -> declaration SEMI
Rule 6     instruction -> assignment SEMI
Rule 7     instruction -> start_if SEMI
Rule 8     type -> NUMBER
Rule 9     type -> BOOLEAN
Rule 10    type -> STRING
Rule 11    type -> ANY
Rule 12    type -> NUMBER LBRACE RBRACE
Rule 13    type -> BOOLEAN LBRACE RBRACE
Rule 14    type -> STRING LBRACE RBRACE
Rule 15    type -> ANY LBRACE RBRACE
Rule 16    assignment -> LET ID COLON type EQ expression
Rule 17    assignment -> LET ID EQ expression
Rule 18    declaration -> LET ID COLON type
Rule 19    declaration -> LET ID
Rule 20    print -> CONSOLE DOT LOG LPAREN expression RPAREN
Rule 21    start_if -> IF if
Rule 22    if -> LPAREN expression RPAREN LBRACE instructions RBRACE
Rule 23    if -> LPAREN expression RPAREN LBRACE instructions RBRACE ELSE LBRACE instructions RBRACE
Rule 24    if -> LPAREN expression RPAREN LBRACE instructions RBRACE ELSE IF if
Rule 25    expresion -> MINUS expression
Rule 26    expresion -> NOT expression
Rule 27    expression -> ID DBPLUS
Rule 28    expression -> ID DBMINUS
Rule 29    expression -> LPAREN expression RPAREN
Rule 30    expression -> expression MULT expression
Rule 31    expression -> expression PLUS expression
Rule 32    expression -> expression DIV expression
Rule 33    expression -> expression MINUS expression
Rule 34    expression -> expression EQ expression
Rule 35    expression -> expression TREQ expression
Rule 36    expression -> expression LT expression
Rule 37    expression -> expression GT expression
Rule 38    expression -> expression LTEQ expression
Rule 39    expression -> expression GTEQ expression
Rule 40    expression -> expression OR expression
Rule 41    expression -> expression AND expression
Rule 42    expression -> expression MOD expression
Rule 43    expression -> expression POW expression
Rule 44    expression -> NUM_CONST
Rule 45    expression -> STR_CONST
Rule 46    expression -> TRUE
Rule 47    expression -> FALSE
Rule 48    expression -> ID

Terminals, with rules where they appear

AND                  : 41
ANY                  : 11 15
BOOLEAN              : 9 13
BREAK                : 
COLON                : 16 18
COMMA                : 
CONSOLE              : 20
CONTINUE             : 
DBMINUS              : 28
DBPLUS               : 27
DIV                  : 32
DOT                  : 20
ELSE                 : 23 24
EQ                   : 16 17 34
FALSE                : 47
FOR                  : 
FUNCTION             : 
GT                   : 37
GTEQ                 : 39
ID                   : 16 17 18 19 27 28 48
IF                   : 21 24
INTERFACE            : 
LBRACE               : 12 13 14 15 22 23 23 24
LBRACKET             : 
LET                  : 16 17 18 19
LOG                  : 20
LPAREN               : 20 22 23 24 29
LT                   : 36
LTEQ                 : 38
MINUS                : 25 33
MOD                  : 42
MULT                 : 30
NOT                  : 26
NOTDBEQ              : 
NULL                 : 
NUMBER               : 8 12
NUM_CONST            : 44
OF                   : 
OR                   : 40
PLUS                 : 31
POW                  : 43
RBRACE               : 12 13 14 15 22 23 23 24
RBRACKET             : 
RETURN               : 
RPAREN               : 20 22 23 24 29
SEMI                 : 4 5 6 7
STRING               : 10 14
STR_CONST            : 45
TREQ                 : 35
TRUE                 : 46
WHILE                : 
error                : 

Nonterminals, with rules where they appear

assignment           : 6
declaration          : 5
expresion            : 
expression           : 16 17 20 22 23 24 25 26 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43
if                   : 21 24
instruction          : 2 3
instructions         : 1 2 22 23 23 24
print                : 4
program              : 0
start_if             : 7
type                 : 16 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . print SEMI
    (5) instruction -> . declaration SEMI
    (6) instruction -> . assignment SEMI
    (7) instruction -> . start_if SEMI
    (20) print -> . CONSOLE DOT LOG LPAREN expression RPAREN
    (18) declaration -> . LET ID COLON type
    (19) declaration -> . LET ID
    (16) assignment -> . LET ID COLON type EQ expression
    (17) assignment -> . LET ID EQ expression
    (21) start_if -> . IF if

    CONSOLE         shift and go to state 8
    LET             shift and go to state 9
    IF              shift and go to state 10

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    print                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    start_if                       shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . print SEMI
    (5) instruction -> . declaration SEMI
    (6) instruction -> . assignment SEMI
    (7) instruction -> . start_if SEMI
    (20) print -> . CONSOLE DOT LOG LPAREN expression RPAREN
    (18) declaration -> . LET ID COLON type
    (19) declaration -> . LET ID
    (16) assignment -> . LET ID COLON type EQ expression
    (17) assignment -> . LET ID EQ expression
    (21) start_if -> . IF if

    $end            reduce using rule 1 (program -> instructions .)
    CONSOLE         shift and go to state 8
    LET             shift and go to state 9
    IF              shift and go to state 10

    instruction                    shift and go to state 11
    print                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    start_if                       shift and go to state 7

state 3

    (3) instructions -> instruction .

    CONSOLE         reduce using rule 3 (instructions -> instruction .)
    LET             reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    RBRACE          reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> print . SEMI

    SEMI            shift and go to state 12


state 5

    (5) instruction -> declaration . SEMI

    SEMI            shift and go to state 13


state 6

    (6) instruction -> assignment . SEMI

    SEMI            shift and go to state 14


state 7

    (7) instruction -> start_if . SEMI

    SEMI            shift and go to state 15


state 8

    (20) print -> CONSOLE . DOT LOG LPAREN expression RPAREN

    DOT             shift and go to state 16


state 9

    (18) declaration -> LET . ID COLON type
    (19) declaration -> LET . ID
    (16) assignment -> LET . ID COLON type EQ expression
    (17) assignment -> LET . ID EQ expression

    ID              shift and go to state 17


state 10

    (21) start_if -> IF . if
    (22) if -> . LPAREN expression RPAREN LBRACE instructions RBRACE
    (23) if -> . LPAREN expression RPAREN LBRACE instructions RBRACE ELSE LBRACE instructions RBRACE
    (24) if -> . LPAREN expression RPAREN LBRACE instructions RBRACE ELSE IF if

    LPAREN          shift and go to state 19

    if                             shift and go to state 18

state 11

    (2) instructions -> instructions instruction .

    CONSOLE         reduce using rule 2 (instructions -> instructions instruction .)
    LET             reduce using rule 2 (instructions -> instructions instruction .)
    IF              reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    RBRACE          reduce using rule 2 (instructions -> instructions instruction .)


state 12

    (4) instruction -> print SEMI .

    CONSOLE         reduce using rule 4 (instruction -> print SEMI .)
    LET             reduce using rule 4 (instruction -> print SEMI .)
    IF              reduce using rule 4 (instruction -> print SEMI .)
    $end            reduce using rule 4 (instruction -> print SEMI .)
    RBRACE          reduce using rule 4 (instruction -> print SEMI .)


state 13

    (5) instruction -> declaration SEMI .

    CONSOLE         reduce using rule 5 (instruction -> declaration SEMI .)
    LET             reduce using rule 5 (instruction -> declaration SEMI .)
    IF              reduce using rule 5 (instruction -> declaration SEMI .)
    $end            reduce using rule 5 (instruction -> declaration SEMI .)
    RBRACE          reduce using rule 5 (instruction -> declaration SEMI .)


state 14

    (6) instruction -> assignment SEMI .

    CONSOLE         reduce using rule 6 (instruction -> assignment SEMI .)
    LET             reduce using rule 6 (instruction -> assignment SEMI .)
    IF              reduce using rule 6 (instruction -> assignment SEMI .)
    $end            reduce using rule 6 (instruction -> assignment SEMI .)
    RBRACE          reduce using rule 6 (instruction -> assignment SEMI .)


state 15

    (7) instruction -> start_if SEMI .

    CONSOLE         reduce using rule 7 (instruction -> start_if SEMI .)
    LET             reduce using rule 7 (instruction -> start_if SEMI .)
    IF              reduce using rule 7 (instruction -> start_if SEMI .)
    $end            reduce using rule 7 (instruction -> start_if SEMI .)
    RBRACE          reduce using rule 7 (instruction -> start_if SEMI .)


state 16

    (20) print -> CONSOLE DOT . LOG LPAREN expression RPAREN

    LOG             shift and go to state 20


state 17

    (18) declaration -> LET ID . COLON type
    (19) declaration -> LET ID .
    (16) assignment -> LET ID . COLON type EQ expression
    (17) assignment -> LET ID . EQ expression

    COLON           shift and go to state 21
    SEMI            reduce using rule 19 (declaration -> LET ID .)
    EQ              shift and go to state 22


state 18

    (21) start_if -> IF if .

    SEMI            reduce using rule 21 (start_if -> IF if .)


state 19

    (22) if -> LPAREN . expression RPAREN LBRACE instructions RBRACE
    (23) if -> LPAREN . expression RPAREN LBRACE instructions RBRACE ELSE LBRACE instructions RBRACE
    (24) if -> LPAREN . expression RPAREN LBRACE instructions RBRACE ELSE IF if
    (27) expression -> . ID DBPLUS
    (28) expression -> . ID DBMINUS
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . expression MULT expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression TREQ expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression GTEQ expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression MOD expression
    (43) expression -> . expression POW expression
    (44) expression -> . NUM_CONST
    (45) expression -> . STR_CONST
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . ID

    ID              shift and go to state 25
    LPAREN          shift and go to state 23
    NUM_CONST       shift and go to state 26
    STR_CONST       shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29

    expression                     shift and go to state 24

state 20

    (20) print -> CONSOLE DOT LOG . LPAREN expression RPAREN

    LPAREN          shift and go to state 30


state 21

    (18) declaration -> LET ID COLON . type
    (16) assignment -> LET ID COLON . type EQ expression
    (8) type -> . NUMBER
    (9) type -> . BOOLEAN
    (10) type -> . STRING
    (11) type -> . ANY
    (12) type -> . NUMBER LBRACE RBRACE
    (13) type -> . BOOLEAN LBRACE RBRACE
    (14) type -> . STRING LBRACE RBRACE
    (15) type -> . ANY LBRACE RBRACE

    NUMBER          shift and go to state 32
    BOOLEAN         shift and go to state 33
    STRING          shift and go to state 34
    ANY             shift and go to state 35

    type                           shift and go to state 31

state 22

    (17) assignment -> LET ID EQ . expression
    (27) expression -> . ID DBPLUS
    (28) expression -> . ID DBMINUS
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . expression MULT expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression TREQ expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression GTEQ expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression MOD expression
    (43) expression -> . expression POW expression
    (44) expression -> . NUM_CONST
    (45) expression -> . STR_CONST
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . ID

    ID              shift and go to state 25
    LPAREN          shift and go to state 23
    NUM_CONST       shift and go to state 26
    STR_CONST       shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29

    expression                     shift and go to state 36

state 23

    (29) expression -> LPAREN . expression RPAREN
    (27) expression -> . ID DBPLUS
    (28) expression -> . ID DBMINUS
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . expression MULT expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression TREQ expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression GTEQ expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression MOD expression
    (43) expression -> . expression POW expression
    (44) expression -> . NUM_CONST
    (45) expression -> . STR_CONST
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . ID

    ID              shift and go to state 25
    LPAREN          shift and go to state 23
    NUM_CONST       shift and go to state 26
    STR_CONST       shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29

    expression                     shift and go to state 37

state 24

    (22) if -> LPAREN expression . RPAREN LBRACE instructions RBRACE
    (23) if -> LPAREN expression . RPAREN LBRACE instructions RBRACE ELSE LBRACE instructions RBRACE
    (24) if -> LPAREN expression . RPAREN LBRACE instructions RBRACE ELSE IF if
    (30) expression -> expression . MULT expression
    (31) expression -> expression . PLUS expression
    (32) expression -> expression . DIV expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . EQ expression
    (35) expression -> expression . TREQ expression
    (36) expression -> expression . LT expression
    (37) expression -> expression . GT expression
    (38) expression -> expression . LTEQ expression
    (39) expression -> expression . GTEQ expression
    (40) expression -> expression . OR expression
    (41) expression -> expression . AND expression
    (42) expression -> expression . MOD expression
    (43) expression -> expression . POW expression

    RPAREN          shift and go to state 38
    MULT            shift and go to state 39
    PLUS            shift and go to state 40
    DIV             shift and go to state 41
    MINUS           shift and go to state 42
    EQ              shift and go to state 43
    TREQ            shift and go to state 44
    LT              shift and go to state 45
    GT              shift and go to state 46
    LTEQ            shift and go to state 47
    GTEQ            shift and go to state 48
    OR              shift and go to state 49
    AND             shift and go to state 50
    MOD             shift and go to state 51
    POW             shift and go to state 52


state 25

    (27) expression -> ID . DBPLUS
    (28) expression -> ID . DBMINUS
    (48) expression -> ID .

    DBPLUS          shift and go to state 53
    DBMINUS         shift and go to state 54
    RPAREN          reduce using rule 48 (expression -> ID .)
    MULT            reduce using rule 48 (expression -> ID .)
    PLUS            reduce using rule 48 (expression -> ID .)
    DIV             reduce using rule 48 (expression -> ID .)
    MINUS           reduce using rule 48 (expression -> ID .)
    EQ              reduce using rule 48 (expression -> ID .)
    TREQ            reduce using rule 48 (expression -> ID .)
    LT              reduce using rule 48 (expression -> ID .)
    GT              reduce using rule 48 (expression -> ID .)
    LTEQ            reduce using rule 48 (expression -> ID .)
    GTEQ            reduce using rule 48 (expression -> ID .)
    OR              reduce using rule 48 (expression -> ID .)
    AND             reduce using rule 48 (expression -> ID .)
    MOD             reduce using rule 48 (expression -> ID .)
    POW             reduce using rule 48 (expression -> ID .)
    SEMI            reduce using rule 48 (expression -> ID .)


state 26

    (44) expression -> NUM_CONST .

    RPAREN          reduce using rule 44 (expression -> NUM_CONST .)
    MULT            reduce using rule 44 (expression -> NUM_CONST .)
    PLUS            reduce using rule 44 (expression -> NUM_CONST .)
    DIV             reduce using rule 44 (expression -> NUM_CONST .)
    MINUS           reduce using rule 44 (expression -> NUM_CONST .)
    EQ              reduce using rule 44 (expression -> NUM_CONST .)
    TREQ            reduce using rule 44 (expression -> NUM_CONST .)
    LT              reduce using rule 44 (expression -> NUM_CONST .)
    GT              reduce using rule 44 (expression -> NUM_CONST .)
    LTEQ            reduce using rule 44 (expression -> NUM_CONST .)
    GTEQ            reduce using rule 44 (expression -> NUM_CONST .)
    OR              reduce using rule 44 (expression -> NUM_CONST .)
    AND             reduce using rule 44 (expression -> NUM_CONST .)
    MOD             reduce using rule 44 (expression -> NUM_CONST .)
    POW             reduce using rule 44 (expression -> NUM_CONST .)
    SEMI            reduce using rule 44 (expression -> NUM_CONST .)


state 27

    (45) expression -> STR_CONST .

    RPAREN          reduce using rule 45 (expression -> STR_CONST .)
    MULT            reduce using rule 45 (expression -> STR_CONST .)
    PLUS            reduce using rule 45 (expression -> STR_CONST .)
    DIV             reduce using rule 45 (expression -> STR_CONST .)
    MINUS           reduce using rule 45 (expression -> STR_CONST .)
    EQ              reduce using rule 45 (expression -> STR_CONST .)
    TREQ            reduce using rule 45 (expression -> STR_CONST .)
    LT              reduce using rule 45 (expression -> STR_CONST .)
    GT              reduce using rule 45 (expression -> STR_CONST .)
    LTEQ            reduce using rule 45 (expression -> STR_CONST .)
    GTEQ            reduce using rule 45 (expression -> STR_CONST .)
    OR              reduce using rule 45 (expression -> STR_CONST .)
    AND             reduce using rule 45 (expression -> STR_CONST .)
    MOD             reduce using rule 45 (expression -> STR_CONST .)
    POW             reduce using rule 45 (expression -> STR_CONST .)
    SEMI            reduce using rule 45 (expression -> STR_CONST .)


state 28

    (46) expression -> TRUE .

    RPAREN          reduce using rule 46 (expression -> TRUE .)
    MULT            reduce using rule 46 (expression -> TRUE .)
    PLUS            reduce using rule 46 (expression -> TRUE .)
    DIV             reduce using rule 46 (expression -> TRUE .)
    MINUS           reduce using rule 46 (expression -> TRUE .)
    EQ              reduce using rule 46 (expression -> TRUE .)
    TREQ            reduce using rule 46 (expression -> TRUE .)
    LT              reduce using rule 46 (expression -> TRUE .)
    GT              reduce using rule 46 (expression -> TRUE .)
    LTEQ            reduce using rule 46 (expression -> TRUE .)
    GTEQ            reduce using rule 46 (expression -> TRUE .)
    OR              reduce using rule 46 (expression -> TRUE .)
    AND             reduce using rule 46 (expression -> TRUE .)
    MOD             reduce using rule 46 (expression -> TRUE .)
    POW             reduce using rule 46 (expression -> TRUE .)
    SEMI            reduce using rule 46 (expression -> TRUE .)


state 29

    (47) expression -> FALSE .

    RPAREN          reduce using rule 47 (expression -> FALSE .)
    MULT            reduce using rule 47 (expression -> FALSE .)
    PLUS            reduce using rule 47 (expression -> FALSE .)
    DIV             reduce using rule 47 (expression -> FALSE .)
    MINUS           reduce using rule 47 (expression -> FALSE .)
    EQ              reduce using rule 47 (expression -> FALSE .)
    TREQ            reduce using rule 47 (expression -> FALSE .)
    LT              reduce using rule 47 (expression -> FALSE .)
    GT              reduce using rule 47 (expression -> FALSE .)
    LTEQ            reduce using rule 47 (expression -> FALSE .)
    GTEQ            reduce using rule 47 (expression -> FALSE .)
    OR              reduce using rule 47 (expression -> FALSE .)
    AND             reduce using rule 47 (expression -> FALSE .)
    MOD             reduce using rule 47 (expression -> FALSE .)
    POW             reduce using rule 47 (expression -> FALSE .)
    SEMI            reduce using rule 47 (expression -> FALSE .)


state 30

    (20) print -> CONSOLE DOT LOG LPAREN . expression RPAREN
    (27) expression -> . ID DBPLUS
    (28) expression -> . ID DBMINUS
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . expression MULT expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression TREQ expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression GTEQ expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression MOD expression
    (43) expression -> . expression POW expression
    (44) expression -> . NUM_CONST
    (45) expression -> . STR_CONST
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . ID

    ID              shift and go to state 25
    LPAREN          shift and go to state 23
    NUM_CONST       shift and go to state 26
    STR_CONST       shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29

    expression                     shift and go to state 55

state 31

    (18) declaration -> LET ID COLON type .
    (16) assignment -> LET ID COLON type . EQ expression

    SEMI            reduce using rule 18 (declaration -> LET ID COLON type .)
    EQ              shift and go to state 56


state 32

    (8) type -> NUMBER .
    (12) type -> NUMBER . LBRACE RBRACE

    EQ              reduce using rule 8 (type -> NUMBER .)
    SEMI            reduce using rule 8 (type -> NUMBER .)
    LBRACE          shift and go to state 57


state 33

    (9) type -> BOOLEAN .
    (13) type -> BOOLEAN . LBRACE RBRACE

    EQ              reduce using rule 9 (type -> BOOLEAN .)
    SEMI            reduce using rule 9 (type -> BOOLEAN .)
    LBRACE          shift and go to state 58


state 34

    (10) type -> STRING .
    (14) type -> STRING . LBRACE RBRACE

    EQ              reduce using rule 10 (type -> STRING .)
    SEMI            reduce using rule 10 (type -> STRING .)
    LBRACE          shift and go to state 59


state 35

    (11) type -> ANY .
    (15) type -> ANY . LBRACE RBRACE

    EQ              reduce using rule 11 (type -> ANY .)
    SEMI            reduce using rule 11 (type -> ANY .)
    LBRACE          shift and go to state 60


state 36

    (17) assignment -> LET ID EQ expression .
    (30) expression -> expression . MULT expression
    (31) expression -> expression . PLUS expression
    (32) expression -> expression . DIV expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . EQ expression
    (35) expression -> expression . TREQ expression
    (36) expression -> expression . LT expression
    (37) expression -> expression . GT expression
    (38) expression -> expression . LTEQ expression
    (39) expression -> expression . GTEQ expression
    (40) expression -> expression . OR expression
    (41) expression -> expression . AND expression
    (42) expression -> expression . MOD expression
    (43) expression -> expression . POW expression

    SEMI            reduce using rule 17 (assignment -> LET ID EQ expression .)
    MULT            shift and go to state 39
    PLUS            shift and go to state 40
    DIV             shift and go to state 41
    MINUS           shift and go to state 42
    EQ              shift and go to state 43
    TREQ            shift and go to state 44
    LT              shift and go to state 45
    GT              shift and go to state 46
    LTEQ            shift and go to state 47
    GTEQ            shift and go to state 48
    OR              shift and go to state 49
    AND             shift and go to state 50
    MOD             shift and go to state 51
    POW             shift and go to state 52


state 37

    (29) expression -> LPAREN expression . RPAREN
    (30) expression -> expression . MULT expression
    (31) expression -> expression . PLUS expression
    (32) expression -> expression . DIV expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . EQ expression
    (35) expression -> expression . TREQ expression
    (36) expression -> expression . LT expression
    (37) expression -> expression . GT expression
    (38) expression -> expression . LTEQ expression
    (39) expression -> expression . GTEQ expression
    (40) expression -> expression . OR expression
    (41) expression -> expression . AND expression
    (42) expression -> expression . MOD expression
    (43) expression -> expression . POW expression

    RPAREN          shift and go to state 61
    MULT            shift and go to state 39
    PLUS            shift and go to state 40
    DIV             shift and go to state 41
    MINUS           shift and go to state 42
    EQ              shift and go to state 43
    TREQ            shift and go to state 44
    LT              shift and go to state 45
    GT              shift and go to state 46
    LTEQ            shift and go to state 47
    GTEQ            shift and go to state 48
    OR              shift and go to state 49
    AND             shift and go to state 50
    MOD             shift and go to state 51
    POW             shift and go to state 52


state 38

    (22) if -> LPAREN expression RPAREN . LBRACE instructions RBRACE
    (23) if -> LPAREN expression RPAREN . LBRACE instructions RBRACE ELSE LBRACE instructions RBRACE
    (24) if -> LPAREN expression RPAREN . LBRACE instructions RBRACE ELSE IF if

    LBRACE          shift and go to state 62


state 39

    (30) expression -> expression MULT . expression
    (27) expression -> . ID DBPLUS
    (28) expression -> . ID DBMINUS
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . expression MULT expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression TREQ expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LTEQ expression
    (39) expression -> . expression GTEQ expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression MOD expression
    (43) expression -> . expression POW expression
    (44) expression -> . NUM_CONST
    (45) expression -> . STR_CONST
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . ID

    ID              shift and go to state 25
    LPAREN          shift and go to state 23
    NUM_CONST       shift and go to state 26
    STR_CONST       shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29

    expression                     shift and go to state 63

state 40
